// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add editable link to post 1`] = `
<div
  className="list-item"
>
  <div>
    <h3
      className="list-item__title"
    >
      test title 1
    </h3>
    <div
      className="list-item__text"
    />
  </div>
  <div
    className="list-item__data"
  >
    <span
      className="list-item__author"
    >
      Posted by 
      George Bortov
    </span>
    <span
      className="list-item__time"
    >
      January 1st 1970
       at 
      1:00
    </span>
  </div>
  <div
    className="list-item__buttons"
  >
    <Link
      className="button"
      replace={false}
      to="/read/1"
    >
      Read
    </Link>
    <Link
      className="button"
      replace={false}
      to="/edit/1"
    >
      Edit
    </Link>
  </div>
</div>
`;

exports[`should render BlogListItem with post and disabled editable link because uid is undefined 1`] = `
<div
  className="list-item"
>
  <div>
    <h3
      className="list-item__title"
    >
      test title 1
    </h3>
    <div
      className="list-item__text"
    >
      Lorem ipsum
 dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Dui saute irure dolor...
    </div>
  </div>
  <div
    className="list-item__data"
  >
    <span
      className="list-item__author"
    >
      Posted by 
      George Bortov
    </span>
    <span
      className="list-item__time"
    >
      January 1st 1970
       at 
      1:00
    </span>
  </div>
  <div
    className="list-item__buttons"
  >
    <Link
      className="button"
      replace={false}
      to="/read/1"
    >
      Read
    </Link>
    <span
      className="button button--disabled"
    >
      Edit
    </span>
  </div>
</div>
`;
